--- a/Changes
+++ b/Changes
@@ -1,9 +1,16 @@
 Revision history for Games-EVE-APIv2
 
+0.03    2013-07-17
+        - Character and Corporation classes now both lazy-load.
+        - Broke key information out into dedicated Key class,
+        allowing for simple checking for key's association with
+        specific characters and corporations.
+        - Expanded attributes exposed on several classes.
+
 0.02    2013-07-13
-        Fixed Character retrieval from multi-character API keys.
+        - Fixed Character retrieval from multi-character API keys.
 
 0.01    2013-07-09
-        First usable version. Core API Key, Character, Corporation,
+        - First usable version. Core API Key, Character, Corporation,
         SkillTree and CertficateTree functionality.
 
